class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception402.java
package com.example.demo.common.errors;

public class Exception402 extends RuntimeException {

	public Exception402(String msg) {
		super();
	}
}
